# ghc88-simplifier-issue

./: CHANGELOG.md  README.md  ddump-simpl-stats  ghc88-simplifier-issue.cabal  shell.nix
nix/: sources.json
src/Test/Bonanza/: Arbitrary.hs  Gen.hs
